<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2018, Virgil Security, Inc.
  ~
  ~ Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~     (1) Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~     (2) Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~
  ~     (3) Neither the name of virgil nor the names of its
  ~     contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/toolbarChannel"
        layout="@layout/toolbar_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clNoMessages"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/rect_primary_dark_rounded_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarChannel">

        <ImageView
            android:id="@+id/ivNoMessages"
            android:layout_width="46dp"
            android:layout_height="40dp"
            android:contentDescription="@string/no_messages_image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_dialog_empty"
            app:layout_constraintBottom_toTopOf="@id/tvNoMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvNoMessages"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_default_margin"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/no_messages_yet"
            android:textColor="@color/snow"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivNoMessages" />
    </android.support.constraint.ConstraintLayout>

    <com.virgilsecurity.android.feature_channel.view.ChatRecyclerView
        android:id="@+id/rvMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/clEnterMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarChannel" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clEnterMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvMessages">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:background="@drawable/rect_trans"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:paddingBottom="@dimen/half_default_margin"
            android:paddingTop="@dimen/half_default_margin"
            android:textColor="@color/snow"
            android:textColorHint="@color/grayLight"
            android:textSize="@dimen/increased_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSend"
            android:layout_width="56dp"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/send_message_button"
            android:paddingEnd="@dimen/default_margin"
            android:paddingStart="@dimen/default_margin"
            android:src="@drawable/ic_send"
            android:tint="@color/virgilGrayLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        style="@style/AccentProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarChannel" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/error_loading_messages"
        android:textColor="@color/snow"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarChannel" />

</android.support.constraint.ConstraintLayout>